# CTF-LLM

./: .gitignore  AGENTS.md  FIX_PLAN.md  README.md  TRAINING.md  config.yaml  finetune.sh  project.toml  pyproject.toml  requirements-colab.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
.mimocode/commands/: ft-diag.md
configs/: gemma4-12b.yaml  gemma4.yaml  ornith10.yaml  qwen35-4b.yaml  qwen35.yaml
data/eval/: ctf_bench.jsonl
docs/: _config.yml  index.html  index.md
docs/_sass/: custom.scss
notebooks/: qwen4b_finetune.ipynb  qwen4b_self_contained.ipynb  self_contained.ipynb
plans/: 001-notebook-critical-fixes.md  002-eval-security-correctness.md  003-dead-code-cleanup.md  004-model-loading-dedup.md  005-test-coverage.md  006-docs-stale-values.md  007-finetune-sh.md  008-data-quality.md  009-config-drift-fix.md  010-dead-code-cleanup.md  011-add-og-image.md  012-gen-eval-bench-tests.md  013-ci-pipeline.md  014-data-pipeline-tests.md  015-eval-orchestration-tests.md  016-website-ux-hardening.md  017-pipeline-critical-fixes.md  018-training-quality-performance.md  019-dataset-quality-overhaul.md  020-fix-undefined-var-process-data.md  021-fix-undefined-learning-rate-notebook.md  022-fix-config-drift-lora-alpha.md  023-fix-temp-dir-race-condition.md  024-fix-bare-except-eval.md  025-fix-temperature-none-eval.md  026-add-test-print-results.md  027-add-test-grade-code-sandbox.md  028-parallelize-doc-scraping.md  029-inline-model-name-eval.md  README.md
scripts/: _dump_nb.py  _inspect_data.py  _nb_dump.md  generate_notebook.py
src/: build_dataset.py  download_datasets.py  eval.py  gen_eval_bench.py  model_utils.py  process_data.py  synthetic_rev_pwn.py  train.py
tests/: test_build_dataset.py  test_build_dataset_expanded.py  test_download_datasets.py  test_eval.py  test_eval_orchestration.py  test_gen_eval_bench.py  test_loss_masking.py  test_process_data.py
