[project]
name = "finetuning"
version = "0.1.0"
description = "Fine-tune LLMs for CTF and competitive programming using Unsloth with QLoRA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "unsloth",
    "torch",
    "transformers",
    "datasets",
    "trl",
    "peft",
    "accelerate",
    "bitsandbytes",
    
    # Tokenizers
    "sentencepiece",
    "protobuf",

    # HTTP/Networking
    "requests",

    # Git operations
    "gitpython",

    # Utilities
    "pyyaml",
    "tqdm",
]

[project.scripts]
finetune = "src.train:main"
build-data = "src.build_dataset:main"
process-data = "src.process_data:main"
download-data = "src.download_datasets:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
